--- a/package.json
+++ b/package.json
@@ -52,14 +52,22 @@
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-layout": "^6.0.0",
     "@ant-design/pro-table": "^2.4.0",
+    "@antv/data-set": "^0.11.4",
+    "@antv/l7-react": "^2.2.21",
+    "@types/lodash.debounce": "^4.0.6",
     "antd": "^4.4.0",
+    "bizcharts": "^3.5.9",
+    "bizcharts-plugin-slider": "^2.1.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.25.3",
+    "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.0.4",
     "umi": "^3.1.2",
     "umi-request": "^1.0.8",
@@ -92,7 +100,7 @@
     "gh-pages": "^3.0.0",
     "husky": "^4.0.7",
     "lint-staged": "^10.0.0",
-    "mockjs": "^1.0.1-beta3",
+    "mockjs": "^1.1.0",
     "prettier": "^2.0.1",
     "pro-download": "1.0.1",
     "puppeteer-core": "^4.0.1",
